wallet side remote spec update